// Copyright (c) The Thanos Authors.
// Licensed under the Apache License 2.0.

syntax = "proto3";

package queryfrontend;

import "store/labelpb/types.proto";

option go_package = "github.com/thanos-io/thanos/pkg/queryfrontend";

message ThanosLabelsResponse {
  // @gotags: json:"status"
  string Status = 1;
  // @gotags: json:"data"
  repeated string Data = 2;
  // @gotags: json:"errorType,omitempty"
  string ErrorType = 3;
  // @gotags: json:"error,omitempty"
  string Error = 4;
  // @gotags: json:"-"
  repeated ResponseHeader Headers = 5;
}

message ThanosSeriesResponse {
  // @gotags: json:"status"
  string Status = 1;
  // @gotags: json:"data"
  repeated thanos.LabelSet Data = 2;
  // @gotags: json:"errorType,omitempty"
  string ErrorType = 3;
  // @gotags: json:"error,omitempty"
  string Error = 4;
  // @gotags: json:"-"
  repeated ResponseHeader Headers = 5;
}

message ResponseHeader {
  // @gotags: json:"-"
  string Name = 1;
  // @gotags: json:"-"
  repeated string Values = 2;
}
